# brsh

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  README.md  brsh.c  brsh.h  brsh_config.h
cmake/Modules/: FindLibGPC.cmake  FindLibWSH.cmake
contrib/gl-matrix/: str.c
data/brushes/: sample_brush_javascript.js  sample_brush_lua.lua  sample_brush_python.py
demo/: CMakeLists.txt
demo/src/: brsh_demo_common.c  brsh_demo_common.h  demo.h  main.c
demo/src/demos/: svg.c
demo/work/brsh_demo.xcodeproj/: project.pbxproj
demo/work/brsh_demo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
demo/work/brsh_demo.xcodeproj/xcuserdata/vs.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
demo/work/brsh_demo.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: xcschememanagement.plist
plugins/affectors/a_jitter/: CMakeLists.txt
plugins/affectors/a_jitter/src/: a_jitter.c  a_jitter.h
plugins/brushes/b_dynamic_javascript/: CMakeLists.txt
plugins/brushes/b_dynamic_javascript/src/: b_dynamic_javascript.c  b_dynamic_javascript.h
plugins/brushes/b_dynamic_python/: CMakeLists.txt
plugins/brushes/b_dynamic_python/src/: b_dynamic_python.c  b_dynamic_python.h
plugins/brushes/b_simple/: CMakeLists.txt
plugins/brushes/b_simple/src/: b_simple.c  b_simple.h
src/: b_brush.c  b_brush.h  brsh_brush.c  brsh_brush.h
src/plugin/: b_plugins.c  b_plugins.h  brsh_plugin.c  brsh_plugin.h  brsh_plugins.c  brsh_plugins.h
test/: CMakeLists.txt  test_brsh.c
work/brsh-ios.xcodeproj/: project.pbxproj
work/brsh-ios.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: brsh-release.xcscheme  brsh.xcscheme  xcschememanagement.plist
work/brsh.xcodeproj/: project.pbxproj
work/brsh.xcodeproj/project.xcworkspace/xcshareddata/: IDEWorkspaceChecks.plist
work/brsh.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: xcschememanagement.plist
